# ftool

./: README.md  ftool.py  pyproject.toml  supported_hardware.json
res/: supported_hardware.json
src/: setup.py  utils.py
